Added todo app exercise work in progress

--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
 
     <!-- megaBlock REACTJS -->
     <link href="bundles/example.bundle.css" rel="stylesheet" />
-  
+    <link href="bundles/toDoApp.bundle.css" rel="stylesheet" />
 </head>
 
 <body>
-	
-    <div id="example01" class=""> </div>
+    <h1>Counter + - </h1>
+    <div id="example01" class="m-b10 p-10"></div>
+
+    <h1 class="p-t10 m-t20 border-t">todo App</h1>
+    <div id="toDoApp" class="b-h p-10"></div>
+
     <script src="bundles/example.bundle.js" type="text/javascript"></script>
+    <script src="bundles/toDoApp.bundle.js" type="text/javascript"></script>
 </body>
 
 </html>
