Completed Redux Example Todo List

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-    <h1>Counter + - </h1>
+    <h1 class="m-l10">Counter + - </h1>
     <div id="example01" class="m-b10 p-10"></div>
 
-    <h1 class="p-t10 m-t20 border-t">todo App</h1>
-    <div id="toDoApp" class="b-h p-10"></div>
+    <h1 class="p-t10 m-t20 border-t m-l10">todo App</h1>
+    <div id="toDoApp" class="b-h p-l10 p-r10 p-t10 p-b10"></div>
 
     <script src="bundles/example.bundle.js" type="text/javascript"></script>
     <script src="bundles/toDoApp.bundle.js" type="text/javascript"></script>
